sec-group.tf
resource "aws_security_group" "bean-elb-sg" {
  name        = "aws-terra-bean-elb-sg"
  description = "Security group for bean-elb"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_bean_elb"
  }
}

resource "aws_security_group" "bastion-sg" {
    name        = "aws-terra-bastion-sg"
    description = "Security group for bastion ec2 instance"
    vpc_id      = module.vpc.vpc_id

    ingress {
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = [var.myip]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "allow_bastion"
    }
}

resource "aws_security_group" "prod-sg" {
    name        = "aws-terra-prod-sg"
    description = "Security group for beanstalk instance"
    vpc_id      = module.vpc.vpc_id

    ingress {
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        security_groups = [aws_security_group.bastion-sg.id]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "allow_beanstalk"
    }
}

resource "aws_security_group" "backend-sg" {
    name        = "aws-terra-backend-sg"
    description = "Security group for RDS, ActiveMQ, Elastic Cache"
    vpc_id      = module.vpc.vpc_id

    ingress {
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        security_groups = [aws_security_group.prod-sg.id]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "allow_bastion"
    }
}

resource "aws_security_group_rule" "sec_group_allow_itself" {
  type              = "ingress"
  from_port         = 0
  to_port           = 65535
  protocol          = "tcp"
  security_group_id = aws_security_group.backend-sg.id
  source_security_group_id = aws_security_group.backend-sg.id
}
